# openvino_cpp

./: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
