cmake_minimum_required(VERSION 3.13)

project(openvino_cpp)

find_package(OpenVINO REQUIRED)

string(REPLACE "runtime/cmake" "" OpenVINO_ROOT ${OpenVINO_DIR})
message(${OpenVINO_ROOT})

set(DEBUG_OUTPUT_DIRECTORY ${OpenVINO_ROOT}/runtime/bin/intel64/Debug)
set(RELEASE_OUTPUT_DIRECTORY ${OpenVINO_ROOT}/runtime/bin/intel64/Release)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})

set(CMAKE_DEBUG_POSTFIX _d)
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(test)

